--- a/package.json
+++ b/package.json
@@ -4,16 +4,40 @@
   "description": "Mod build and helper tool for Farming Simulator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc --pretty",
+    "test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
+    "watch": "npm run build -- --watch",
+    "watch:test": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RealismusModding/farmsim.ts.git"
   },
   "author": "Jos Kuijpers",
-  "license": "ISC",
+  "license": "BSD",
   "bugs": {
     "url": "https://github.com/RealismusModding/farmsim.ts/issues"
   },
-  "homepage": "https://github.com/RealismusModding/farmsim.ts#readme"
+  "files": [
+    "bin",
+    "dist"
+  ],
+  "homepage": "https://github.com/RealismusModding/farmsim.ts#readme",
+  "devDependencies": {
+    "@types/chai": "^4.0.0",
+    "@types/commander": "^2.3.31",
+    "@types/mocha": "^2.2.39",
+    "@types/node": "^7.0.5",
+    "@types/sinon": "^2.3.0",
+    "chai": "^4.0.1",
+    "mocha": "^3.2.0",
+    "rimraf": "^2.6.1",
+    "sinon": "^2.3.2",
+    "ts-node": "^3.0.4",
+    "typescript": "^2.2.1"
+  },
+  "dependencies": {
+    "commander": "^2.9.0"
+  }
 }
