--- a/package.json
+++ b/package.json
@@ -26,18 +26,23 @@
   "homepage": "https://github.com/RealismusModding/farmsim.ts#readme",
   "devDependencies": {
     "@types/chai": "^4.0.0",
-    "@types/commander": "^2.3.31",
+    "@types/chalk": "^2.2.0",
+    "@types/commander": "^2.11.0",
+    "@types/inquirer": "0.0.35",
     "@types/mocha": "^2.2.39",
-    "@types/node": "^7.0.5",
-    "@types/sinon": "^2.3.0",
+    "@types/node": "^8.0.53",
+    "@types/sinon": "^4.0.0",
     "chai": "^4.0.1",
-    "mocha": "^3.2.0",
+    "mocha": "^4.0.1",
     "rimraf": "^2.6.1",
-    "sinon": "^2.3.2",
+    "sinon": "^4.0.0",
     "ts-node": "^3.0.4",
     "typescript": "^2.2.1"
   },
   "dependencies": {
-    "commander": "^2.9.0"
+    "chalk": "^2.3.0",
+    "clui": "^0.3.6",
+    "commander": "^2.11.0",
+    "inquirer": "^4.0.0"
   }
 }
