--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/commander": "^2.11.0",
     "@types/inquirer": "0.0.35",
     "@types/js-yaml": "^3.10.0",
+    "@types/lodash": "^4.14.85",
     "@types/mocha": "^2.2.39",
     "@types/node": "^8.0.53",
     "@types/sinon": "^4.0.0",
@@ -43,6 +44,7 @@
     "clui": "^0.3.6",
     "commander": "^2.11.0",
     "inquirer": "^4.0.0",
-    "js-yaml": "^3.10.0"
+    "js-yaml": "^3.10.0",
+    "lodash": "^4.17.4"
   }
 }
