--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   "devDependencies": {
     "@types/chai": "^4.0.0",
     "@types/commander": "^2.11.0",
+    "@types/fs-extra": "^4.0.5",
     "@types/inquirer": "0.0.35",
     "@types/js-yaml": "^3.10.0",
     "@types/lodash": "^4.14.85",
     "@types/mocha": "^2.2.39",
     "@types/node": "^8.0.53",
+    "@types/rimraf": "^2.0.2",
     "@types/sinon": "^4.0.0",
     "@types/xml2js": "^0.4.2",
     "chai": "^4.0.1",
@@ -44,6 +46,7 @@
   "dependencies": {
     "clui": "^0.3.6",
     "commander": "^2.11.0",
+    "fs-extra": "^4.0.2",
     "inquirer": "^4.0.0",
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
