--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "fs-extra": "^4.0.2",
     "inquirer": "^4.0.0",
     "js-yaml": "^3.10.0",
+    "replacestream": "^4.0.3",
     "lodash": "^4.17.4",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "yazl": "^2.4.3"
   }
 }
