--- a/package.json
+++ b/package.json
@@ -29,36 +29,37 @@
   "homepage": "https://github.com/RealismusModding/farmsim.ts#readme",
   "devDependencies": {
     "@types/bluebird": "^3.5.19",
-    "@types/chai": "^4.0.0",
-    "@types/commander": "^2.11.0",
-    "@types/fs-extra": "^4.0.5",
-    "@types/inquirer": "0.0.35",
-    "@types/js-yaml": "^3.10.0",
-    "@types/lodash": "^4.14.85",
-    "@types/mocha": "^2.2.39",
-    "@types/node": "^8.0.53",
+    "@types/chai": "^4.1.2",
+    "@types/fs-extra": "^5.0.0",
+    "@types/inquirer": "0.0.36",
+    "@types/js-yaml": "^3.10.1",
+    "@types/lodash": "^4.14.95",
+    "@types/mocha": "^2.2.47",
+    "@types/node": "^8.5.9",
     "@types/rimraf": "^2.0.2",
-    "@types/sinon": "^4.0.0",
+    "@types/sinon": "^4.1.3",
     "@types/winston": "^2.3.7",
     "@types/xml2js": "^0.4.2",
+    "@types/xmlpoke": "^0.1.3",
     "chai": "^4.0.1",
-    "mocha": "^4.0.1",
+    "mocha": "^5.0.0",
     "rimraf": "^2.6.1",
-    "sinon": "^4.0.0",
-    "ts-node": "^3.0.4",
-    "typescript": "^2.2.1"
+    "sinon": "^4.2.1",
+    "ts-node": "^4.1.0",
+    "typescript": "^2.6.2"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
     "clui": "^0.3.6",
-    "commander": "^2.11.0",
-    "fs-extra": "^4.0.2",
-    "inquirer": "^4.0.0",
+    "commander": "^2.13.0",
+    "fs-extra": "^5.0.0",
+    "inquirer": "^5.0.1",
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
     "replacestream": "^4.0.3",
     "winston": "^2.4.0",
     "xml2js": "^0.4.19",
+    "xmlpoke": "^0.1.13",
     "yazl": "^2.4.3"
   }
 }
