--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/lodash": "^4.14.95",
     "@types/mocha": "^2.2.47",
     "@types/node": "^8.5.9",
+    "@types/request": "^2.47.0",
+    "@types/request-promise-native": "^1.0.12",
     "@types/rimraf": "^2.0.2",
     "@types/sinon": "^4.1.3",
     "@types/winston": "^2.3.7",
@@ -57,6 +59,8 @@
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
     "replacestream": "^4.0.3",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "winston": "^2.4.0",
     "xml2js": "^0.4.19",
     "xmlpoke": "^0.1.13",
