Fix uninstall. Implement XMl and LUA verification

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/fs-extra": "^5.0.0",
     "@types/inquirer": "0.0.36",
     "@types/js-yaml": "^3.10.1",
+    "@types/libxmljs": "^0.14.31",
     "@types/lodash": "^4.14.95",
     "@types/mocha": "^2.2.47",
     "@types/node": "^8.5.9",
@@ -56,8 +57,10 @@
     "clui": "^0.3.6",
     "commander": "^2.13.0",
     "fs-extra": "^5.0.0",
+    "hasbin": "^1.2.3",
     "inquirer": "^5.0.1",
     "js-yaml": "^3.10.0",
+    "libxmljs": "^0.18.7",
     "lodash": "^4.17.4",
     "replacestream": "^4.0.3",
     "request": "^2.83.0",
