--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "bin": {
     "fs": "./bin/fs"
   },
+  "engines": {
+    "node": ">=8.9"
+  },
   "homepage": "https://github.com/RealismusModding/farmsim.ts#readme",
   "devDependencies": {
     "@types/bluebird": "^3.5.19",
