Better version of node

--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "fs": "./bin/fs"
   },
   "engines": {
-    "node": ">=8.9"
+    "node": ">=8"
   },
+  "engineStrict" : true,
   "homepage": "https://github.com/RealismusModding/farmsim.ts#readme",
   "devDependencies": {
     "@types/bluebird": "^3.5.19",
